--- a/ballrotate/src/main/res/layout/rajawali_textureview_fragment.xml
+++ b/ballrotate/src/main/res/layout/rajawali_textureview_fragment.xml
@@ -9,12 +9,12 @@
         android:layout_height="match_parent"
         layout="@layout/relative_layout_loader_container"/>
 
-    <!--<org.rajawali3d.view.TextureView-->
-        <!--android:id="@+id/rajwali_surface"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="fill_parent"-->
-        <!--textureview:frameRate="60.0"-->
-        <!--textureview:renderMode="RENDER_WHEN_DIRTY"/>-->
+    <org.rajawali3d.view.TextureView
+        android:id="@+id/rajwali_surface"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        textureview:frameRate="60.0"
+        textureview:renderMode="RENDER_WHEN_DIRTY"/>
 
     <Button
         android:layout_width="wrap_content"
