--- a/ballrotate/src/main/res/drawable/switch_custom_track_off.xml
+++ b/ballrotate/src/main/res/drawable/switch_custom_track_off.xml
@@ -5,5 +5,10 @@
     <stroke
         android:width="5dp"
         android:color="#00000000" />
-    <corners android:radius="30dp" />
+
+    <corners android:radius="15dp" />
+
+    <size
+        android:width="30dp"
+        android:height="30dp"/>
 </shape>
