--- a/ballrotate/src/main/res/layout/relative_layout_loader_container.xml
+++ b/ballrotate/src/main/res/layout/relative_layout_loader_container.xml
@@ -8,10 +8,7 @@
         android:id="@+id/progress_bar_loader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/animated_progress"
-        android:indeterminateOnly="true" />
+        android:layout_centerInParent="true" />
 
     <!--<org.rajawali3d.examples.views.GitHubLogoView-->
         <!--android:id="@+id/image_view_example_link"-->
