--- a/halloween/src/main/res/layout/activity_main.xml
+++ b/halloween/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tubug.wall.halloween.MainActivity">
+    tools:context="com.tubug.wall.halloween3d.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
