--- a/halloween/src/main/res/xml/moon_studio_wallpaper.xml
+++ b/halloween/src/main/res/xml/moon_studio_wallpaper.xml
@@ -4,5 +4,5 @@
     android:thumbnail="@mipmap/icon"
     android:author="@string/lwp_author"
     android:description="@string/lwp_desc"
-    android:settingsActivity="com.tubug.wall.ballrotate.wallpaper.WallpaperPreferenceActivity"
+    android:settingsActivity="com.tubug.wall.halloween3d.wallpaper.WallpaperPreferenceActivity"
     />
